Pull request #1033: AG-9518 Fix filter page styles
Merge in EXTENSIONS/browser-extension from fix/AG-9518 to feature/AG-2737

Squashed commit of the following:

commit 087c2ee8938944d3c178aabf53b3ab778fe70fbd
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Wed Aug 11 18:51:50 2021 +0300

    update css

commit 12e1f3b94c2093373849add8ff00aa4f3bd972ca
Author: Vladimir Zhelvis <v.zhelvis@adguard.com>
Date:   Wed Aug 11 18:23:05 2021 +0300

    update styles

--- a/Extension/src/pages/options/components/Filters/group.pcss
+++ b/Extension/src/pages/options/components/Filters/group.pcss
@@ -6,4 +6,10 @@
             color: var(--gray400);
         }
     }
+
+    &__checkbox {
+        @media (min-width: 640px) {
+            border-radius: 0 8px 8px 0;
+        }
+    }
 }
